--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello world blya
+<!DOCTYPE html>
+<html>
+   <head>
+      <title>HTML Meta Tag</title>
+      <meta http-equiv = "refresh" content = "3; url = https://www.youtube.com/watch?v=dQw4w9WgXcQ" />
+   </head>
+   <body>
+      <p>Redirecting to another URL</p>
+   </body>
+</html>
