--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
       <meta http-equiv = "refresh" content = "3; url = https://www.youtube.com/watch?v=dQw4w9WgXcQ" />
    </head>
    <body>
-   		<h2 id="sequence"></h2>
+   		<h1 style="font-family:'Courier New'">Общажная банда на отдыхе meeting</h1>
+   		<h2 id="sequence" style="font-size:60px; position: absolute; left: 50%; top: 50%; font-family:'Courier New" ></h2>
           <script>
         var example = ['Loading', 'Loading.', 'Loading..', 'Loading...'];
 
