--- a/index.html
+++ b/index.html
@@ -99,12 +99,67 @@
     <tr>
         <th>Дата</th>
         <th>Кринж</th>
-        <th>Время без кринжа</th>
+        <th>Кринж продержался</th>
+    </tr>
+    <tr >
+        <td id="last">2023-09-10 17:40:00</td>
+        <td>Не пускали в офис. Стояли как додики под дверью и звонили</td>
+        <td>-</td>
     </tr>
     <tr>
-        <td id="last">2023-08-22 14:53:00</td>
+        <td>2023-09-09 22:10:00</td>
+        <td>Включили видео с поздравлением</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>2023-09-09 20:44:00</td>
+        <td>Дима выиграл в лотерею и вышел</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>2023-09-09 19:29:00</td>
+        <td>Милфа предложила пофоткаться</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>2023-09-09 19:10:00</td>
+        <td>Все свалили с соседнего стола и кинули ребят из Катюши</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>2023-09-09 18:41:00</td>
+        <td>Кринж с местом для Оли</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>2023-09-09 18:10:00</td>
+        <td>Записали поздравление для компании на видео</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>2023-09-09 11:04:00</td>
+        <td>Форт Боярд</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>2023-09-08 23:19:00</td>
+        <td>Дима играл в фанты</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>2023-09-08 18:20:00</td>
+        <td>На конфе включили видео про Игоря</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>2023-09-08 15:16:00</td>
+        <td>Отстояли очередь за пивом, а оно платное</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>2023-08-22 14:53:00</td>
         <td>Взяли прозвища "Цукерберг" и "Фасилитатор"</td>
-        <td>-</td>
+        <td></td>
     </tr>
     <tr>
         <td>2023-08-22 14:11:00</td>
