--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
         <th>Кринж продержался</th>
     </tr>
     <tr >
-        <td id="last">2023-09-10 17:40:00</td>
-        <td>Не пускали в офис. Стояли как додики под дверью и звонили</td>
+        <td id="last">2023-10-06 09:30:00</td>
+        <td>Никита воспользовался копилкой</td>
         <td>-</td>
     </tr>
     <tr>
