--- a/index.html
+++ b/index.html
@@ -101,8 +101,13 @@
         <th>Кринж</th>
         <th>Кринж продержался</th>
     </tr>
+    <tr>
+        <td id="last">2023-10-10 17:17:00</td>
+        <td>Никита смотрел и скидывал фотки с корпората</td>
+        <td>-</td>
+    </tr>
     <tr >
-        <td id="last">2023-10-06 09:30:00</td>
+        <td>2023-10-06 09:30:00</td>
         <td>Никита воспользовался копилкой</td>
         <td>-</td>
     </tr>
