--- a/index.html
+++ b/index.html
@@ -102,14 +102,19 @@
         <th>Кринж продержался</th>
     </tr>
     <tr>
-        <td id="last">2023-10-10 17:17:00</td>
-        <td>Никита смотрел и скидывал фотки с корпората</td>
+        <td id="last">2024-04-19 10:00:01</td>
+        <td>Разыграли Якова на дейлике)))))</td>
         <td>-</td>
+    </tr>
+    <tr>
+        <td>2023-10-10 17:17:00</td>
+        <td>Никита смотрел и скидывал фотки с корпората</td>
+        <td></td>
     </tr>
     <tr >
         <td>2023-10-06 09:30:00</td>
         <td>Никита воспользовался копилкой</td>
-        <td>-</td>
+        <td></td>
     </tr>
     <tr>
         <td>2023-09-09 22:10:00</td>
