--- a/index.html
+++ b/index.html
@@ -102,9 +102,19 @@
         <th>Кринж продержался</th>
     </tr>
     <tr>
+        <td id="last">2024-05-22 10:40:00</td>
+        <td>Созвон по мерчу</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td id="last">2024-05-20 18:00:00</td>
+        <td>Дима ходил мерять мерч (не мерял)</td>
+        <td></td>
+    </tr>
+    <tr>
         <td id="last">2024-04-19 10:00:01</td>
         <td>Разыграли Якова на дейлике)))))</td>
-        <td>-</td>
+        <td></td>
     </tr>
     <tr>
         <td>2023-10-10 17:17:00</td>
