--- a/index.html
+++ b/index.html
@@ -130,9 +130,14 @@
         <th>Кринж продержался</th>
     </tr>
     <tr>
-        <td id="last">2024-06-28 15:57:00</td>
-        <td>Яков ворвался на созвон с прощальной речью</td>
+        <td id="last">2024-08-07 13:30:00</td>
+        <td>Познакомились с Гузель))))))</td>
         <td>-</td>
+    </tr>
+    <tr>
+        <td>2024-06-28 15:57:00</td>
+        <td>Яков ворвался на созвон с прощальной речью</td>
+        <td></td>
     </tr>
     <tr>
         <td>2024-05-22 10:40:00</td>
